# GitHub-Stats-API

./: .gitignore  app.py  app_flask.py  config.py  main.py  pyproject.toml  readme.md  requirements.txt  test.py  vercel.json  wsgi.py
middleware/: __init__.py  rate_limiter.py
models/: __init__.py  analytics.py  commits.py  contributions.py  profile.py  pull_requests.py  repositories.py  stars.py
models/canonical/: constants.py  envelope.py  summary.py
modules/: github.py  unified.py
routes/: __init__.py  analytics.py  api.py  badges.py  dashboard.py  dependencies.py  docs.py  heatmap.py  pr.py  profile.py  summary.py  unified.py
services/: achievements.py  analytics_service.py  canonical_mapper.py  client.py  commits.py  contributions.py  github_service.py  graphql.py  languages.py  pr_service.py  profile.py  profile_views_service.py  pull_requests.py  repositories.py  stars.py  unified_mapper.py
tests/: test_badges_endpoint.py  test_canonical.py  test_unified.py
utils/: __init__.py  md_html_convertor.py
